# schemascout

./: CLAUDE.md  README.md  pyproject.toml
.claude/skills/scan-schema/: SKILL.md
src/schemascout/: cli.py
src/schemascout/db/: connection.py
tests/: test_cli.py
