[project]
name = "schemascout"
version = "0.1.0"
description = "CLI tool that explores undocumented SQL databases and generates architecture documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
]

[project.scripts]
schemascout = "schemascout.cli:app"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schemascout"]
